--- a/RelatorioPMAIIS/RelatorioPMAWeb/.classpath
+++ b/RelatorioPMAIIS/RelatorioPMAWeb/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="/opt/eclipse_juno/jsf-impl-2.1.10.jar"/>
 	<classpathentry kind="lib" path="/opt/eclipse_juno/jsf-api-2.1.10.jar"/>
 	<classpathentry kind="lib" path="/opt/eclipse_juno/javaee-api-5.0-2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/RelatoriosPMAVO"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
