--- a/RelatorioPMAIIS/RelatoriosPMAEjb/.classpath
+++ b/RelatorioPMAIIS/RelatoriosPMAEjb/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="lib" path="/opt/eclipse_juno/javaee-api-5.0-2.jar"/>
 	<classpathentry kind="lib" path="/opt/eclipse_juno/jsf-api-2.1.10.jar"/>
 	<classpathentry kind="lib" path="/opt/eclipse_juno/jsf-impl-2.1.10.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/RelatorioPMAWeb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/RelatoriosPMAVO"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
