--- a/RelatorioPMAIIS/RelatorioPMAWeb/.project
+++ b/RelatorioPMAIIS/RelatorioPMAWeb/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RelatorioPMAWeb</name>
+	<name>RelatorioPMAWebIIS</name>
 	<comment></comment>
 	<projects>
 	</projects>
